--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "periodic-table",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tabla-periodica.yoshualopez.ml/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.11"
+    "@types/styled-components": "^5.1.11",
+    "gh-pages": "^3.2.3"
   }
 }
