--- a/package.json
+++ b/package.json
@@ -2,28 +2,17 @@
   "name": "periodic-table",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tabla-periodica.yoshualopez.ml/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
     "styled-components": "^5.3.0",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build && echo tabla-periodica.yoshualopez.ml > ./build/CNAME",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,6 +36,13 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.11",
-    "gh-pages": "^3.2.3"
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "typescript": "^4.8.2"
   }
 }
